feat: implement selection request
